fix vertically-aligned css for vertical radiogroups + checkboxgroups. add spacing between checkboxes + labels - rt #38883

--- a/examples/vertically-aligned-css/vertically-aligned.css
+++ b/examples/vertically-aligned-css/vertically-aligned.css
@@ -158,12 +158,13 @@ fieldset .notes {
 }
 
 fieldset .multi.vertical input,
-fieldset.checkboxgroup.vertical input,
-fieldset.radiogroup.vertical input
+fieldset.checkboxgroup .vertical input,
+fieldset.radiogroup .vertical input
 {
 	display: block;
 	float: left;
 	clear: left;
+	margin-right: 0.5em;
 }
 
 fieldset .multi.vertical select {
@@ -172,14 +173,14 @@ fieldset .multi.vertical select {
 	clear: right;
 }
 
-fieldset.checkboxgroup.vertical label,
-fieldset.radiogroup.vertical label
+fieldset.checkboxgroup .vertical label,
+fieldset.radiogroup .vertical label
 {
 	display: block;
 	clear: right;
 }
 
-fieldset.radiogroup.vertical .subgroup {
+fieldset.radiogroup .vertical .subgroup {
 	float: left;
 }
 
